--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 	<head>
+		<meta charset="UTF-8">
+    	<title>Timer Shuffle</title>
 		<link rel = "stylesheet" type = "text/css" href="index.css">
 		<script src = "index.js"></script>
 	</head>
 	
 	<body>
-		<h1 class = "title">Timers</h1>
+		<h1 class = "title">Timer Shuffle</h1>
+		<canvas id="myChart"></canvas>
 	</body>
 </html>
