--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 	<head>
 		<meta charset="UTF-8">
     	<title>Timer Shuffle</title>
-		<link rel = "stylesheet" type = "text/css" href="index.css">
-		<script src = "index.js"></script>
+		<link rel="stylesheet" type="text/css" href="index.css">
+		<script src="index.js"></script>
 	</head>
 	
 	<body>
-		<h1 class = "title">Timer Shuffle</h1>
+		<h1 class="title">Timer Shuffle</h1>
 		<canvas id="myChart"></canvas>
+		<div id="clocks"></div>
+		<span class="bottomButton" id="addClock">+</span>
 	</body>
 </html>
