made button positioning absolute and styled differently.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<body>
 		<h1 class="title">Timer Shuffle</h1>
-		<canvas id="myChart"></canvas>
+		<canvas id="myChart" width="300px"></canvas>
 		<div id="clocks"></div>
 		<span class="bottomButton" id="addClock">+</span>
 	</body>
