--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	</head>
 	
 	<body>
-		<h1 class="title">Timer Shuffle</h1>
-		<canvas id="myChart" width="300px"></canvas>
+		<div class="topBox">
+			<h1>Timer Shuffle</h1>
+		</div>
 		<div id="clocks"></div>
 		<span class="bottomButton" id="addClock">+</span>
 	</body>
