--- a/section.html
+++ b/section.html
@@ -1,4 +1,4 @@
-<div>
+<div class="ui segment">
 	<canvas class="timeChart" width="50px" height="50px"></canvas>
-	<p style="color:#fff">you added text</p>
+	<p>you added text</p>
 </div>
