Moved page files into their own folder

--- a/pages/index.html
+++ b/pages/index.html
@@ -2,10 +2,10 @@
 	<head>
 		<meta charset="UTF-8">
     	<title>Timer Shuffle</title>
-		<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+		<link rel="stylesheet" type="text/css" href="../semantic/dist/semantic.min.css">
 		<link rel="stylesheet" type="text/css" href="index.css">
 		<script src="index.js"></script>
-		<script src="semantic/dist/semantic.min.js"></script>
+		<script src="../semantic/dist/semantic.min.js"></script>
 	</head>
 	
 	<body>
