--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,9 @@
 		<div class="ui segment fixed sticky topBox">
 			<h1 class="ui header">Timer Shuffle</h1>
 		</div>
-		<div id="clocks"></div>
+		<div id="clocks">
+			<div id="content"></div>
+		</div>
 		<div id="bottomGroup" class="ui action input">
 			<input type="text" placeholder="Add action">
 			<button class="ui olive icon button" id="addClock">
